Fixed issues on mobile in nav and hero header

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     background-color: var(--light-yellow);
-    padding-top: 150px;
+    padding-top: 155px;
 
     @media (min-width: 768px) {
         padding-top: 105px;
@@ -68,10 +68,14 @@ body {
 .intro__img {
     width: 100%;
     height: auto;
-    max-height: 700px;
     object-fit: cover;
     position: relative;
     z-index: 0;
+    min-height: 450px;
+
+    @media (min-width: 768px) {
+        max-height: 700px;
+    }
 }
 
 .intro__img--min-height {
@@ -89,14 +93,22 @@ body {
 }
 
 .intro__title {
-    font-size: 4rem;
+    font-size: 2.5rem;
     font-weight: bold;
+
+    @media (min-width: 992px) {
+        font-size: 4rem;
+    }
 }
 
 .intro__desc {
-    font-size: 2rem;
+    font-size: 1.4rem;
     color: var(--amber);
     margin: 1rem 0 2rem 0;
+
+    @media (min-width: 992px) {
+        font-size: 2rem;
+    }
 }
 
 /** FOOTER **/
